--- a/config/default-single-timestep.yaml
+++ b/config/default-single-timestep.yaml
@@ -15,13 +15,15 @@ run:
 results_dir: results/
 summary_dir: results/
 
-regions: ["Europe"]
+regions: ["europe"]
 
 snapshots:
   start: "2013-01-01 00:00"
   end: "2013-01-01 04:00"
   inclusive: "left"
-  resolution: "1H"
+  # Use freq instead of invalid 'resolution'. 1H gives snapshots at 00,01,02,03.
+  # For coarser 4-hourly test set freq: "4H" and adjust end to "2013-01-01 04:00" with inclusive: "right".
+  freq: "1H"
 
 enable:
   retrieve_databundle: true
