--- a/config/month-threehour-zero-co2.yaml
+++ b/config/month-threehour-zero-co2.yaml
@@ -115,6 +115,7 @@ solving:
     skip_iterations: true
     track_iterations: false
   solver:
+    # Force HiGHS to dodge ARC's limited Gurobi license.
     name: highs
     options: highs-default
   mem: 48000  # double memory for year-long run
