--- a/config/overrides/core-technologies.yaml
+++ b/config/overrides/core-technologies.yaml
@@ -8,8 +8,20 @@ run:
 
 solving:
   options:
+    formulation: kirchhoff
+    load_shedding: 500.
+    noisy_costs: false
+    clip_p_max_pu: 0.01
+    min_iterations: 1
+    max_iterations: 2
+    skip_iterations: true
+    track_iterations: false
     extra_functionality:
       - scripts/extra/limit_core_technologies.py::limit_core_technologies
+  solver:
+    name: highs
+    options: highs-default
+  mem: 24000
 
 custom:
   core_technologies:
