--- a/config/overrides/core-technologies.yaml
+++ b/config/overrides/core-technologies.yaml
@@ -6,6 +6,43 @@ run:
   name: europe-day-core-tech
   shared_cutouts: true
 
+regions: ["europe"]
+countries:
+  - "AL"
+  - "AT"
+  - "BA"
+  - "BE"
+  - "BG"
+  - "CH"
+  - "CZ"
+  - "DE"
+  - "DK"
+  - "EE"
+  - "ES"
+  - "FI"
+  - "FR"
+  - "GB"
+  - "GR"
+  - "HR"
+  - "HU"
+  - "IE"
+  - "IT"
+  - "LT"
+  - "LU"
+  - "LV"
+  - "ME"
+  - "MK"
+  - "NL"
+  - "NO"
+  - "PL"
+  - "PT"
+  - "RO"
+  - "RS"
+  - "SE"
+  - "SI"
+  - "SK"
+  - "XK"
+
 scenario:
   simpl: [""]
   ll: ["copt"]
