--- a/config/day-threehour.yaml
+++ b/config/day-threehour.yaml
@@ -71,21 +71,22 @@ enable:
 scenario:
   simpl: [""]
   ll: ["copt"]
-  clusters: [50]
+  clusters: [70]  # minimum for this reduced country list (cluster_network requires >= 70)
   opts:
     - "Co2L-3h"  # Co2L applies the PyPSA-Earth CO2 cap preset; -3h coarsens snapshots into 3 h blocks
 
 clustering:
   focus_weights:
-    DE: 0.035
-    FR: 0.035
-    GB: 0.035
-    IT: 0.035
-    ES: 0.035
-    PL: 0.025
-    NO: 0.015
-    SE: 0.02
-    NL: 0.015
+    DE: 0.0517
+    FR: 0.0422
+    GB: 0.0418
+    IT: 0.0366
+    ES: 0.0294
+    PL: 0.0236
+    NL: 0.0111
+    SE: 0.0065
+    DK: 0.0037
+    NO: 0.0034
 
 atlite:
   nprocesses: 4
