--- a/config/yearly-threehour-zero-co2-green-ammonia.yaml
+++ b/config/yearly-threehour-zero-co2-green-ammonia.yaml
@@ -77,9 +77,8 @@ solving:
     extra_functionality:
       - scripts/extra/green_ammonia.py::add_green_ammonia
   solver:
-    # Force HiGHS to dodge ARC's limited Gurobi license.
-    name: highs
-    options: highs-default
+    name: gurobi
+    options: gurobi-default
   mem: 48000
 
 enable:
@@ -107,15 +106,16 @@ load_options:
 
 clustering:
   focus_weights:
-    DE: 0.035
-    FR: 0.035
-    GB: 0.035
-    IT: 0.035
-    ES: 0.035
-    PL: 0.025
-    NO: 0.015
-    SE: 0.02
-    NL: 0.015
+    DE: 0.0517
+    FR: 0.0422
+    GB: 0.0418
+    IT: 0.0366
+    ES: 0.0294
+    PL: 0.0236
+    NL: 0.0111
+    SE: 0.0065
+    DK: 0.0037
+    NO: 0.0034
 
 logging:
   level: INFO
